[package]
name = "mock_injections"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"]}
reqwest = { version = "0.11", features = ["json", "blocking"] }
futures = "0.3.18"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
rocket = { version = "0.5.0-rc.1" , features = ["secrets", "tls", "json"] }
fake = { version = "2.4", features=['derive', 'chrono','uuid']}
rand = "0.8"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
structopt = { version = "0.3.25", default-features = false }
colored = "2.0.0"